[workspace]
resolver = "2"  # 使用 2021 版的 resolver

members = [
    "common",
    "gpu-driver",
    "render",
    "wm",
    "rui-lib",
    "apps/test-window",
]

# 全局配置（所有子crate共享）
[workspace.package]
edition = "2021"
license = "AGPL-3.0"  # 主仓库用AGPL，应用可单独指定
repository = "https://github.com/E-comOS-Operation-System/RUI.git"  # 替换为你的仓库地址

[workspace.dependencies]
# 所有子crate可能用到的公共依赖（版本统一管理）
x86_64 = "0.15.2"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
spin = "0.9.8"
linked_list_allocator = "0.9.0"