[package]
name = "test-window"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"  # 应用单独用Apache许可

[[bin]]
name = "test-window"
path = "src/main.rs"

[dependencies]
rui-lib = { path = "../../rui-lib" }  # 依赖控件库
common = { path = "../../common" }
x86_64 = { workspace = true, features = ["instructions"] }
